Copy 'logs' and 'calls' across from swagger v1 to swagger v2.
Update api/server to include logs and calls ednpoints from V2 route.

Update list calls to be similar to that of other v2 objects.

Chaning calls and logs WIP
