# api/logs/validator/validator.go
@@ -2,6 +2,7 @@ package validator
 
 import (
 	"context"
+	"fmt"
 	"io"
 
 	"github.com/fnproject/fn/api/models"
@@ -16,25 +17,26 @@ type validator struct {
 }
 
 // callID or appID will never be empty.
-func (v *validator) InsertLog(ctx context.Context, appID, callID string, callLog io.Reader) error {
+func (v *validator) InsertLog(ctx context.Context, appID, fnID, callID string, callLog io.Reader) error {
 	if callID == "" {
 		return models.ErrDatastoreEmptyCallID
 	}
 	if appID == "" {
 		return models.ErrMissingAppID
 	}
-	return v.LogStore.InsertLog(ctx, appID, callID, callLog)
+	if fnID == "" {
+		return models.ErrMissingFnID
+	}
+	fmt.Println("Inserting log")
+	return v.LogStore.InsertLog(ctx, appID, fnID, callID, callLog)
 }
 
 // callID or appID will never be empty.
-func (v *validator) GetLog(ctx context.Context, appID, callID string) (io.Reader, error) {
+func (v *validator) GetLog(ctx context.Context, callID string) (io.Reader, error) {
 	if callID == "" {
 		return nil, models.ErrDatastoreEmptyCallID
 	}
-	if appID == "" {
-		return nil, models.ErrMissingAppID
-	}
-	return v.LogStore.GetLog(ctx, appID, callID)
+	return v.LogStore.GetLog(ctx, callID)
 }
 
 // callID or appID will never be empty.
@@ -45,16 +47,16 @@ func (v *validator) InsertCall(ctx context.Context, call *models.Call) error {
 	if call.AppID == "" {
 		return models.ErrMissingAppID
 	}
+	if call.FnID == "" {
+		return models.ErrMissingFnID
+	}
 	return v.LogStore.InsertCall(ctx, call)
 }
 
 // callID or appID will never be empty.
-func (v *validator) GetCall(ctx context.Context, appID, callID string) (*models.Call, error) {
+func (v *validator) GetCall(ctx context.Context, callID string) (*models.Call, error) {
 	if callID == "" {
 		return nil, models.ErrDatastoreEmptyCallID
 	}
-	if appID == "" {
-		return nil, models.ErrMissingAppID
-	}
-	return v.LogStore.GetCall(ctx, appID, callID)
+	return v.LogStore.GetCall(ctx, callID)
 }
